# esp32-playground

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
components/dht11/: CMakeLists.txt  README.md  dht11.c
components/dht11/include/: dht11.h
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_events.c  app_events.h  app_mqtt.c  app_mqtt.h  core.c  core.h  dht11.h  dht11_tasks.c  dht11_tasks.h  hello_world_main.c  http_controllers.c  http_controllers.h  http_server.c  http_server.h  luminescence.c  luminescence.h  main.c  moisture.c  moisture.h  relay.c  relay.h  sensor_tasks.c  sensor_tasks.h  sensors.c  sensors.h  wifi_sta.c  wifi_sta.h
